--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,45 @@ body main .container .box .calendar table th {
   min-width: 10px;
   width: 10%;
 }
+body main .container .daysOptions {
+  width: 80%;
+}
+body main .container .daysOptions h3 {
+  font-size: 25px;
+}
+body main .container .daysOptions h3 b {
+  font-weight: bold;
+}
+body main .container .daysOptions .container {
+  display: flex;
+}
+body main .container .daysOptions .container .option {
+  cursor: pointer;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+body main .container .daysOptions .container .option .color {
+  height: 100%;
+  width: 80px;
+  border-radius: 10px;
+  margin: 0px 5px;
+}
+body main .container .daysOptions .container .option p {
+  font-size: 24px;
+}
+body main .container .daysOptions .container .active {
+  background-color: #63ff63;
+}
+body main .container .daysOptions .container .remover {
+  background-color: #ea4e8f;
+}
 body main .container .calBox {
   width: 80%;
 }
