--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body main .container {
   display: flex;
   flex-wrap: wrap;
 }
+body main .container hr {
+  width: 100%;
+  color: rgba(0, 0, 0, 0);
+  border: none;
+}
 body main .container h1 {
   font-size: 40px;
   width: 100%;
@@ -115,6 +120,47 @@ body main .container .daysOptions .container .active {
 }
 body main .container .daysOptions .container .remover {
   background-color: #ea4e8f;
+}
+body main .container .logRegBox {
+  width: 50%;
+  text-align: center;
+}
+body main .container .logRegBox form {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  width: 80%;
+  max-width: 500px;
+}
+body main .container .logRegBox form input, body main .container .logRegBox form select, body main .container .logRegBox form #passPowerBox {
+  all: unset;
+  padding: 10px;
+  margin: 5px 2px;
+  width: 100%;
+  text-align: left;
+  background-color: #fff;
+}
+body main .container .logRegBox form a, body main .container .logRegBox form p {
+  align-items: center;
+  align-self: center;
+  margin: 20px 5px 5px;
+}
+body main .container .logRegBox form p {
+  color: #ff0000;
+}
+body main .container .logRegBox form a {
+  text-decoration: underline;
+}
+body main .container .logRegBox form input[type=submit] {
+  background-color: white;
+  width: auto;
+  margin-top: 20px;
+  font-size: 20px;
+}
+body main .container .logRegBox form #passPowerBox {
+  display: none;
+  text-align: center;
 }
 body main .container .calBox {
   width: 80%;
