--- a/css/style.scss
+++ b/css/style.scss
@@ -4,9 +4,55 @@ body {
   font-family: 'Open Sans', sans-serif;
 
   main {
+    noscript{
+      position: absolute;
+      z-index: 2;
+      background-color: #000;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      h2{
+        color: #ffffff;
+        font-size: 50px;
+      }
+    }
+    #loadingBox{
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.01);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      h2{
+        font-size: 45px;
+          color: #6c6c6c;
+      }
+    }
     display: flex;
     justify-content: center;
-
+    .notificationBox{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      .notification{
+        background-color: rgba(255, 255, 255, 0.53);
+        margin: 20px;
+        padding: 10px;
+        border-radius: 10px;
+        b{
+          font-weight: bold;
+        }
+        .close{
+          margin-left: 10px;
+        }
+      }
+    }
     .container {
       padding-top: 25px;
       justify-content: center;
@@ -96,7 +142,6 @@ body {
           }
         }
       }
-
       .daysOptions {
         width: 80%;
 
