--- a/css/style.scss
+++ b/css/style.scss
@@ -43,13 +43,18 @@ body {
       .notification{
         background-color: rgba(255, 255, 255, 0.53);
         margin: 20px;
+        width: auto;
         padding: 10px;
         border-radius: 10px;
         b{
           font-weight: bold;
         }
         .close{
+          position: relative;
+          top:0;
+          left: 0;
           margin-left: 10px;
+          float: right;
         }
       }
     }
