--- a/css/style.scss
+++ b/css/style.scss
@@ -129,6 +129,10 @@ body {
 
           .day {
             cursor: pointer;
+            p{
+              font-size: 12px;
+              height: 15px;
+            }
           }
 
           table {
